--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -114,167 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['After',\n",
-       " 'the',\n",
-       " 'glimpse',\n",
-       " 'I',\n",
-       " 'had',\n",
-       " 'had',\n",
-       " 'of',\n",
-       " 'the',\n",
-       " 'Martians',\n",
-       " 'emerging',\n",
-       " 'from',\n",
-       " 'the',\n",
-       " 'cylinder',\n",
-       " 'in',\n",
-       " 'which',\n",
-       " 'they',\n",
-       " 'had',\n",
-       " 'come',\n",
-       " 'to',\n",
-       " 'the',\n",
-       " 'earth',\n",
-       " 'from',\n",
-       " 'their',\n",
-       " 'planet',\n",
-       " 'a',\n",
-       " 'kind',\n",
-       " 'of',\n",
-       " 'fascination',\n",
-       " 'paralysed',\n",
-       " 'my',\n",
-       " 'actions',\n",
-       " 'I',\n",
-       " 'remained',\n",
-       " 'standing',\n",
-       " 'knee-deep',\n",
-       " 'in',\n",
-       " 'the',\n",
-       " 'heather',\n",
-       " 'staring',\n",
-       " 'at',\n",
-       " 'the',\n",
-       " 'mound',\n",
-       " 'that',\n",
-       " 'hid',\n",
-       " 'them',\n",
-       " 'I',\n",
-       " 'was',\n",
-       " 'a',\n",
-       " 'battleground',\n",
-       " 'of',\n",
-       " 'fear',\n",
-       " 'and',\n",
-       " 'curiosity',\n",
-       " 'I',\n",
-       " 'did',\n",
-       " 'not',\n",
-       " 'dare',\n",
-       " 'to',\n",
-       " 'go',\n",
-       " 'back',\n",
-       " 'towards',\n",
-       " 'the',\n",
-       " 'pit',\n",
-       " 'but',\n",
-       " 'I',\n",
-       " 'felt',\n",
-       " 'a',\n",
-       " 'passionate',\n",
-       " 'longing',\n",
-       " 'to',\n",
-       " 'peer',\n",
-       " 'into',\n",
-       " 'it',\n",
-       " 'I',\n",
-       " 'began',\n",
-       " 'walking',\n",
-       " 'therefore',\n",
-       " 'in',\n",
-       " 'a',\n",
-       " 'big',\n",
-       " 'curve',\n",
-       " 'seeking',\n",
-       " 'some',\n",
-       " 'point',\n",
-       " 'of',\n",
-       " 'vantage',\n",
-       " 'and',\n",
-       " 'continually',\n",
-       " 'looking',\n",
-       " 'at',\n",
-       " 'the',\n",
-       " 'sand',\n",
-       " 'heaps',\n",
-       " 'that',\n",
-       " 'hid',\n",
-       " 'these',\n",
-       " 'new-comers',\n",
-       " 'to',\n",
-       " 'our',\n",
-       " 'earth',\n",
-       " 'Once',\n",
-       " 'a',\n",
-       " 'leash',\n",
-       " 'of',\n",
-       " 'thin',\n",
-       " 'black',\n",
-       " 'whips',\n",
-       " 'like',\n",
-       " 'the',\n",
-       " 'arms',\n",
-       " 'of',\n",
-       " 'an',\n",
-       " 'octopus',\n",
-       " 'flashed',\n",
-       " 'across',\n",
-       " 'the',\n",
-       " 'sunset',\n",
-       " 'and',\n",
-       " 'was',\n",
-       " 'immediately',\n",
-       " 'withdrawn',\n",
-       " 'and',\n",
-       " 'afterwards',\n",
-       " 'a',\n",
-       " 'thin',\n",
-       " 'rod',\n",
-       " 'rose',\n",
-       " 'up',\n",
-       " 'joint',\n",
-       " 'by',\n",
-       " 'joint',\n",
-       " 'bearing',\n",
-       " 'at',\n",
-       " 'its',\n",
-       " 'apex',\n",
-       " 'a',\n",
-       " 'circular',\n",
-       " 'disk',\n",
-       " 'that',\n",
-       " 'spun',\n",
-       " 'with',\n",
-       " 'a',\n",
-       " 'wobbling',\n",
-       " 'motion',\n",
-       " 'What',\n",
-       " 'could',\n",
-       " 'be',\n",
-       " 'going',\n",
-       " 'on',\n",
-       " 'there']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there? there\n"
+     ]
     }
    ],
    "source": [
@@ -284,13 +132,7 @@
     "\n",
     "wellstext_list = wellstext.split()\n",
     "\n",
-    "lst = []\n",
-    "\n",
-    "for word in wellstext_list:\n",
-    "    word = word.strip(punc)\n",
-    "    lst.append(word)\n",
-    "\n",
-    "lst"
+    "lst = [word.strip(punc) for word in wellstext_list]"
    ]
   },
   {
@@ -363,7 +205,7 @@
     "stemmed_list = []\n",
     "\n",
     "for word in lewistext_list:\n",
-    "    if re.search(r\"(ing|ed|ion|s)$\", word) is not None:\n",
+    "    if re.search(r\"(ing|ed|ion|s)$\", word):\n",
     "        word = re.sub(r\"([A-Za-z]*)(ing|ed|ion|s)$\", r\"\\1\", word)\n",
     "        stemmed_list.append(word)\n",
     "    else:\n",
@@ -393,14 +235,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "handmaiden , wilt thou please , all wise , any other sort of the chime Of darkness and wit , Your anger against accepting unsolicited donations are the Attic connection with Jason 's heart , The meaning was perhaps his own ancient times before the olden Story , darling hand Thee , Jason's denunciation , and wakes the Project Gutenberg-tm concept and a great God , and the house._ CHORUS of wrath foregone . </s> an angrier hand Guideth all other work red gash growing old way Hither , and day ? </s> 's _Mort de Tintagiles_ . </s> is a constant state applicable to torture thee -- And mine enemies -- both from out to thee. . </s> peace offering upon one of thee . </s> That God Shall I must I am sore , refrain Thy deeds for cometh ! </s> those that falleth , performing , a registered trademark , art foul among their boyhood. . </s> entity providing copies of escape is false . </s> So plain living ? </s> <s> See Introduction , who should be a woman '' system without paying any Project Gutenberg-tm License terms of corn . ] </s> <s> Compliance requirements "
+      "<s> And yet in accordance with this or associated with peace ! </s> , not sleep , of Aethra , and long hour . Ah , thou hast , '' ; whom , and sky To Attic system without paying any files containing a mystic and hide thee , but just , ere the hate Of common ground on the ever . </s> OF GREEK IN PARAGRAPH 1.F.3 , you a voice of my words of power divine ? </s> these criticisms one flaw was thy breast That was seen , lest thou weepest there . </s> shed Where once was true king Sisyphus . . </s> Pray not one of promoting the Project Gutenberg-tm electronic work on the foam Of all man 's `` ) were bought by the main PG search facility : They will guard of Corinth . </s> a wounded sore oppressed virtue . </s> . </s> , hold it hath hunted thee ; but with peace , or charity . . </s> <s> Call him . </s> I shield them at the weaker by suffering and for its original cruelty of us . </s> </s> removed all good To them the early date of ? "
      ]
     }
    ],
@@ -431,14 +273,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s> JASON . <s> <s> So God hath heard . her , to thine own agony ? sons . , howsoe'er I shield them , and all the world to me Some path , if even now , the crown is on the chariot and is still . all my heart I hate ; but that dead breast Clung still to his : till , wild , like one possessed , He dragged himself half free ; and then Much darkness , all my house . them , die They must . down and clinging to_ CREON ) . "
+      "the day They joined their hands , for a doom untold ? <s> <s> I saved thee . knees ! to us were treasures heapèd high In rich kings ' rooms ; what else ? -- What is it thou He turns from ? and sanctities Thou canst not yield me up for such as these ? . Loves of man , whose cup stood full before , That God should send this one thing . , that which all men dread : The tales too , meseemeth , shall stir Her hate unscathed , or a man most pure of sin my children , that goeth pale to the kiss so cold , her spirit wounded sore With love for this new bride ; not that I will not seek thy friends beguiled Have shut for thee the ears of God , to pleasure thee I ask one thing . hand Thee , thou , if the man -- cursèd be mine To see our charge fulfilled ; nor shall again Look homeward ere we have seen : 't is an ill Friend . . Could this land Be still their home awhile : could thine own child to one Whom thy soul , O Light : '' The cry of a strange man 's love , and get thine armour on , My mother 's sin ? , The cold bed in the folds Of those fine robes it held , as from a wounded pine The gum starts , where those gnawing poisons fine Bit in the days of yore . "
      ]
     }
    ],
@@ -479,7 +321,15 @@
    "source": [
     "*space for your text answer here*\n",
     "\n",
-    "# TO-DO"
+    "Neither text was very coherent, but I think the trigram sentences made more sense overall. From a distance, the bigram text looks like a regular paragraph, but the flow of the sentences and any potential \"subject\" is lost very quickly. The trigram model also loses the subject, but it seems to do so slower and less abruptly.\n",
+    "\n",
+    "From the bigram my \n",
+    "\n",
+    "My favorite text from the trigram is an excerpt that I saved from what it generated once. I made the joke that it was babbling a story about \"tragic greek tax fraud\":\n",
+    "\n",
+    "*\"“Gods or mortals one alone , Where the tears ran over : A Play . common it is important to maintaining tax exempt status by the Sun”*\n",
+    "\n",
+    "It's clear that the part about taxes had to do with the text added by Project Gutenburg, but it definitely made me laugh."
    ]
   },
   {
@@ -515,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +383,7 @@
        " ('of', 'IN')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +418,7 @@
        "'AT'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -590,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +449,7 @@
        "'the'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -732,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +591,7 @@
        "<ConditionalFreqDist with 3 conditions>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -767,7 +617,7 @@
        "['a', 'b', 'c']"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -779,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +638,7 @@
        "FreqDist({'X': 1, 'Y': 1})"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -801,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -829,27 +679,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['The',\n",
-       " 'Fulton',\n",
-       " 'Grand',\n",
-       " 'said',\n",
-       " 'of',\n",
-       " 'primary',\n",
-       " 'produced',\n",
-       " 'no',\n",
-       " 'that',\n",
-       " 'place']"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14394 1723\n",
+      "11.97%\n"
+     ]
     }
    ],
    "source": [
@@ -869,13 +708,15 @@
     "\n",
     "#print(\"a\", \":\", cfd_dict[\"a\"])\n",
     "\n",
-    "cfd_ambiguous = []\n",
+    "cfd_ambiguous = set()\n",
     "\n",
     "for tuple in brown_news:\n",
     "    if len(cfd[tuple[0]]) > 1:\n",
-    "        cfd_ambiguous.append(tuple[0])\n",
+    "        cfd_ambiguous.add(tuple[0])\n",
     "\n",
-    "cfd_ambiguous[:10]\n"
+    "print(len(cfd), len(cfd_ambiguous))\n",
+    "\n",
+    "print(format(len(cfd_ambiguous)/len(cfd), \".2%\"))"
    ]
   },
   {
@@ -927,13 +768,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "THIS IS A CHANGE"
-   ]
   }
  ],
  "metadata": {
