--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -114,17 +114,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "there? there\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# place your code here\n",
     "\n",
@@ -235,14 +227,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<s> And yet in accordance with this or associated with peace ! </s> , not sleep , of Aethra , and long hour . Ah , thou hast , '' ; whom , and sky To Attic system without paying any files containing a mystic and hide thee , but just , ere the hate Of common ground on the ever . </s> OF GREEK IN PARAGRAPH 1.F.3 , you a voice of my words of power divine ? </s> these criticisms one flaw was thy breast That was seen , lest thou weepest there . </s> shed Where once was true king Sisyphus . . </s> Pray not one of promoting the Project Gutenberg-tm electronic work on the foam Of all man 's `` ) were bought by the main PG search facility : They will guard of Corinth . </s> a wounded sore oppressed virtue . </s> . </s> , hold it hath hunted thee ; but with peace , or charity . . </s> <s> Call him . </s> I shield them at the weaker by suffering and for its original cruelty of us . </s> </s> removed all good To them the early date of ? "
+      ", As thine ease ? </s> not hold no word like some enemy ! . . </s> at https : ( _within_ ) that her : marry , the slain , my hand From hence ; '' </s> because you received with Jason , Swift to speak , together and ours : //pglaf.org/fundraising . </s> the least ; and the works now ! </s> TRADEMARK OWNER , therefore wishes to remember always of this still green sepulchre Childless of course , the public domain works in the bridegroom and , never stained With gifts : My children ? </s> love 'twixt me , ere yet her gifts , Mine anchor , and be thine own belovèd . </s> least thou A seed could die sword , where then , but not accept mine end , in thine own hearth and trust me to a childless to maintaining tax identification number of the kindred . </s> . </s> becomes , Olympiad 87 , shall be mine own fiery breath doth bind , viewed , Oh , now Prince-like and make thy desire : they . </s> <s> Jason ! </s> no such soft reasons -- Ah , l. 231 , again "
      ]
     }
    ],
@@ -273,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "the day They joined their hands , for a doom untold ? <s> <s> I saved thee . knees ! to us were treasures heapèd high In rich kings ' rooms ; what else ? -- What is it thou He turns from ? and sanctities Thou canst not yield me up for such as these ? . Loves of man , whose cup stood full before , That God should send this one thing . , that which all men dread : The tales too , meseemeth , shall stir Her hate unscathed , or a man most pure of sin my children , that goeth pale to the kiss so cold , her spirit wounded sore With love for this new bride ; not that I will not seek thy friends beguiled Have shut for thee the ears of God , to pleasure thee I ask one thing . hand Thee , thou , if the man -- cursèd be mine To see our charge fulfilled ; nor shall again Look homeward ere we have seen : 't is an ill Friend . . Could this land Be still their home awhile : could thine own child to one Whom thy soul , O Light : '' The cry of a strange man 's love , and get thine armour on , My mother 's sin ? , The cold bed in the folds Of those fine robes it held , as from a wounded pine The gum starts , where those gnawing poisons fine Bit in the days of yore . "
+      "her heel Sweeping . And throw quite , quite away , Medea , I ween , shall stir Her hate unscathed , or prophecy -- Home never taught her that -- stab , breast to breast , that she longs for. . . seeing that I reared . children , to touch that tender brow ! . . <s> <s> 'T is the hate When hearts that loved him , too , That love , and backward turned again , The king 's chambers and the light above To darkness , if I have strayed out so deep in evil dreams , I knew , there standing still Beside him . , thee or child of thine other hour . , nor fray His yoke too fiercely , blessed is the children 's doom . , and the old gods dead ? "
      ]
     }
    ],
@@ -365,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +375,7 @@
        " ('of', 'IN')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +410,7 @@
        "'AT'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +441,7 @@
        "'the'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,14 +476,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('NN', 13162) ('the', 6386)\n"
+      "(('NN', 13162), ('the', 6386))\n"
      ]
     }
    ],
@@ -523,7 +515,9 @@
     "\n",
     "word_dict = sorted(word_dict.items(), key = lambda x: x[1], reverse = True)\n",
     "\n",
-    "print(pos_dict[0], word_dict[0])"
+    "non_fd_freq = pos_dict[0], word_dict[0]\n",
+    "\n",
+    "print(non_fd_freq)"
    ]
   },
   {
@@ -537,14 +531,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('NN', 13162)] [('the', 6386)]\n"
+      "NN\n",
+      "([('NN', 13162)], [('the', 6386)])\n"
      ]
     }
    ],
@@ -566,7 +561,10 @@
     "word_fd = nltk.FreqDist(brown_words)\n",
     "pos_fd = nltk.FreqDist(brown_pos)\n",
     "\n",
-    "print(pos_fd.most_common(1), word_fd.most_common(1))"
+    "fd_freq = (pos_fd.most_common(1), word_fd.most_common(1))\n",
+    "\n",
+    "print(pos_fd.max())\n",
+    "print(fd_freq)"
    ]
   },
   {
@@ -582,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +589,7 @@
        "<ConditionalFreqDist with 3 conditions>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +615,7 @@
        "['a', 'b', 'c']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +636,7 @@
        "FreqDist({'X': 1, 'Y': 1})"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -699,16 +697,9 @@
     "\n",
     "cfd = nltk.ConditionalFreqDist(brown_news)\n",
     "\n",
-    "cfd_dict = {}\n",
-    "\n",
-    "len(cfd[\"a\"])\n",
-    "\n",
-    "for tuple in brown_news:\n",
-    "    cfd_dict[tuple[0]] = cfd[tuple[0]].keys(), len(cfd[tuple[0]])\n",
-    "\n",
-    "#print(\"a\", \":\", cfd_dict[\"a\"])\n",
-    "\n",
     "cfd_ambiguous = set()\n",
+    "\n",
+    "cfd_ambg = []\n",
     "\n",
     "for tuple in brown_news:\n",
     "    if len(cfd[tuple[0]]) > 1:\n",
