--- a/Homework/Introcl_homework_2.ipynb
+++ b/Homework/Introcl_homework_2.ipynb
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", As thine ease ? </s> not hold no word like some enemy ! . . </s> at https : ( _within_ ) that her : marry , the slain , my hand From hence ; '' </s> because you received with Jason , Swift to speak , together and ours : //pglaf.org/fundraising . </s> the least ; and the works now ! </s> TRADEMARK OWNER , therefore wishes to remember always of this still green sepulchre Childless of course , the public domain works in the bridegroom and , never stained With gifts : My children ? </s> love 'twixt me , ere yet her gifts , Mine anchor , and be thine own belovèd . </s> least thou A seed could die sword , where then , but not accept mine end , in thine own hearth and trust me to a childless to maintaining tax identification number of the kindred . </s> . </s> becomes , Olympiad 87 , shall be mine own fiery breath doth bind , viewed , Oh , now Prince-like and make thy desire : they . </s> <s> Jason ! </s> no such soft reasons -- Ah , l. 231 , again "
+      "these twain . </s> </s> . </s> of thine own house . JASON . . </s> TRANSLATED INTO ENGLISH RHYMING VERSE WITH NO OTHER WARRANTIES OF THIS PROJECT GUTENBERG LICENSE * This , as set to have reasoned with thine oath 's pain ; not gold held high , Folded her actual mode of any agent or redistribute this always . </s> , that they were blinded , and the _Trojan Women_ A . if a means of this man can be shrivelled as they need shrink from Corinth here Creon 's bodies_ . </s> . . </s> help thee ? </s> <s> -- False mocking ! </s> but gave all its first for what wrath at 4557 Melan Dr. S. Fairbanks , Ino , I hold me , at all my road , only irrational and scarcely found in the downtrodden , Mother slew them to cause . </s> to , for copies of the originator of Medea , Void-armed for many a play , but he stayed from mine To save my sires , Since not from both brain Tempts them in her . </s> , but it vanity , Zeus in thy direst wrong For myself most "
      ]
     }
    ],
@@ -265,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "her heel Sweeping . And throw quite , quite away , Medea , I ween , shall stir Her hate unscathed , or prophecy -- Home never taught her that -- stab , breast to breast , that she longs for. . . seeing that I reared . children , to touch that tender brow ! . . <s> <s> 'T is the hate When hearts that loved him , too , That love , and backward turned again , The king 's chambers and the light above To darkness , if I have strayed out so deep in evil dreams , I knew , there standing still Beside him . , thee or child of thine other hour . , nor fray His yoke too fiercely , blessed is the children 's doom . , and the old gods dead ? "
+      "Thou be , I yet will live to slay them , yet one day , Wild heart , Thy suppliant , pity me ! to thine eyes , Which search no heart , her sleeping wrath . the land , when down the long Still grasp of law not changing with the mood Of mercy , and had Grief in thy grief . evil . their battles , shield in hand entwined , Came fire the fiercer , till the next risen sun ; No hope now ! <s> And banishment For those two babes , nor shield from any wrong . "
      ]
     }
    ],
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -754,10 +754,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
