--- a/Homework/Introcl_homework_2_espie.ipynb
+++ b/Homework/Introcl_homework_2_espie.ipynb
@@ -116,7 +116,167 @@
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['After',\n",
+       " 'the',\n",
+       " 'glimpse',\n",
+       " 'I',\n",
+       " 'had',\n",
+       " 'had',\n",
+       " 'of',\n",
+       " 'the',\n",
+       " 'Martians',\n",
+       " 'emerging',\n",
+       " 'from',\n",
+       " 'the',\n",
+       " 'cylinder',\n",
+       " 'in',\n",
+       " 'which',\n",
+       " 'they',\n",
+       " 'had',\n",
+       " 'come',\n",
+       " 'to',\n",
+       " 'the',\n",
+       " 'earth',\n",
+       " 'from',\n",
+       " 'their',\n",
+       " 'planet',\n",
+       " 'a',\n",
+       " 'kind',\n",
+       " 'of',\n",
+       " 'fascination',\n",
+       " 'paralysed',\n",
+       " 'my',\n",
+       " 'actions',\n",
+       " 'I',\n",
+       " 'remained',\n",
+       " 'standing',\n",
+       " 'knee-deep',\n",
+       " 'in',\n",
+       " 'the',\n",
+       " 'heather',\n",
+       " 'staring',\n",
+       " 'at',\n",
+       " 'the',\n",
+       " 'mound',\n",
+       " 'that',\n",
+       " 'hid',\n",
+       " 'them',\n",
+       " 'I',\n",
+       " 'was',\n",
+       " 'a',\n",
+       " 'battleground',\n",
+       " 'of',\n",
+       " 'fear',\n",
+       " 'and',\n",
+       " 'curiosity',\n",
+       " 'I',\n",
+       " 'did',\n",
+       " 'not',\n",
+       " 'dare',\n",
+       " 'to',\n",
+       " 'go',\n",
+       " 'back',\n",
+       " 'towards',\n",
+       " 'the',\n",
+       " 'pit',\n",
+       " 'but',\n",
+       " 'I',\n",
+       " 'felt',\n",
+       " 'a',\n",
+       " 'passionate',\n",
+       " 'longing',\n",
+       " 'to',\n",
+       " 'peer',\n",
+       " 'into',\n",
+       " 'it',\n",
+       " 'I',\n",
+       " 'began',\n",
+       " 'walking',\n",
+       " 'therefore',\n",
+       " 'in',\n",
+       " 'a',\n",
+       " 'big',\n",
+       " 'curve',\n",
+       " 'seeking',\n",
+       " 'some',\n",
+       " 'point',\n",
+       " 'of',\n",
+       " 'vantage',\n",
+       " 'and',\n",
+       " 'continually',\n",
+       " 'looking',\n",
+       " 'at',\n",
+       " 'the',\n",
+       " 'sand',\n",
+       " 'heaps',\n",
+       " 'that',\n",
+       " 'hid',\n",
+       " 'these',\n",
+       " 'new-comers',\n",
+       " 'to',\n",
+       " 'our',\n",
+       " 'earth',\n",
+       " 'Once',\n",
+       " 'a',\n",
+       " 'leash',\n",
+       " 'of',\n",
+       " 'thin',\n",
+       " 'black',\n",
+       " 'whips',\n",
+       " 'like',\n",
+       " 'the',\n",
+       " 'arms',\n",
+       " 'of',\n",
+       " 'an',\n",
+       " 'octopus',\n",
+       " 'flashed',\n",
+       " 'across',\n",
+       " 'the',\n",
+       " 'sunset',\n",
+       " 'and',\n",
+       " 'was',\n",
+       " 'immediately',\n",
+       " 'withdrawn',\n",
+       " 'and',\n",
+       " 'afterwards',\n",
+       " 'a',\n",
+       " 'thin',\n",
+       " 'rod',\n",
+       " 'rose',\n",
+       " 'up',\n",
+       " 'joint',\n",
+       " 'by',\n",
+       " 'joint',\n",
+       " 'bearing',\n",
+       " 'at',\n",
+       " 'its',\n",
+       " 'apex',\n",
+       " 'a',\n",
+       " 'circular',\n",
+       " 'disk',\n",
+       " 'that',\n",
+       " 'spun',\n",
+       " 'with',\n",
+       " 'a',\n",
+       " 'wobbling',\n",
+       " 'motion',\n",
+       " 'What',\n",
+       " 'could',\n",
+       " 'be',\n",
+       " 'going',\n",
+       " 'on',\n",
+       " 'there']"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# place your code here\n",
     "\n",
@@ -127,7 +287,9 @@
     "lst = []\n",
     "\n",
     "for word in wellstext_list:\n",
-    "    lst.append(word.strip(punc))"
+    "    lst.append(word.strip(punc))\n",
+    "\n",
+    "lst"
    ]
   },
   {
@@ -178,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,14 +392,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "betray , Faith that which , Came with knowledge of hate me. . </s> would-be comforter . </s> -- Not a furlong 's castle , though in the whole Life , if she knew us . </s> I read Pindar tells us some sound of love runs no Argo e'er man , if she really know Some states where The stronger made to yield , all : //www.gutenberg.org/3/5/4/5/35451/ Produced by an oath and full of the tradition failed him and darker , Unknown , lord of the brave the last . </s> . </s> ; not by killing her children "
+      ", a more closely connected with us by your country now Thy broken me and in lore of all Greece , from outside the form of a king that ! </s> in this license and is probably not stab my two babes -- The person is slowly away._ JASON . </s> . </s> donations to reap , On the view . </s> the Project Gutenberg-tm collection will probably feel , unasked , and Medea_ . </s> <s> P. 35. ll . </s> thought ! </s> _ololugæ_ . </s> scarce nameable , such a mere local interests in blood that are "
      ]
     }
    ],
@@ -268,14 +430,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", now Atonement cometh ! 's son , a savage bride Won in far seas and left -- no mother near , No bloodier spirit between heaven and hell . ( _suddenly throwing herself down and clinging to_ CREON ) . , a voice and a friend to her heart Is willing , in this land , Where once was fondness ; and gold is stronger made Than words innumerable to bend men 's sight : And thy love returns not . <s> <s> JASON . tremble for ? all : A feeble seed , a savage bride Won in far seas and left -- no mother near , Do not. . . . friends , but now abate , Ah , but ill , what mak'st thou here , Thou yet shalt find in lonely places , why wilt empty thus thine hand Of treasure ? ! "
+      "seal by seal , A proud land untrodden of war : They are dead , The flame of flame , in other days than these , and all is now Peace for the new Bridegroom , to bind thee , and home , and all ! . eyes be alway just . For that -- stab , breast to breast , and bear more gifts or less Of fortune , but perish ; for the new delight Thou wooest , so tall And fair ; in vain . worst hour A friend 's clean heart , then , Thy golden quiver , Nor rouse that dark eye in its heart some thunder-fire , Slow gathering , that love her dear . hast , or cunning , strive and falter not . I am a living curse . <s> <s> MEDEA . <s> <s> Aye , 't is one of all powers that bless . their bread In exile , flying , flying to the day Lead her , and my foot is on the brow , Where wilt thou cast me out from home . . <s> <s> MEDEA . "
      ]
     }
    ],
@@ -545,7 +707,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NN\n",
       "([('NN', 13162)], [('the', 6386)])\n"
      ]
     }
@@ -570,7 +731,6 @@
     "\n",
     "fd_freq = (pos_fd.most_common(1), word_fd.most_common(1))\n",
     "\n",
-    "print(pos_fd.max())\n",
     "print(fd_freq)"
    ]
   },
