--- a/Homework/Introcl_homework_2_espie.ipynb
+++ b/Homework/Introcl_homework_2_espie.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
        " 'there']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +399,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", a more closely connected with us by your country now Thy broken me and in lore of all Greece , from outside the form of a king that ! </s> in this license and is probably not stab my two babes -- The person is slowly away._ JASON . </s> . </s> donations to reap , On the view . </s> the Project Gutenberg-tm collection will probably feel , unasked , and Medea_ . </s> <s> P. 35. ll . </s> thought ! </s> _ololugæ_ . </s> scarce nameable , such a mere local interests in blood that are "
+      "<s> MEDEA . </s> couldst thou see your state law was a great debt for the rites over sundering seas , Yet I not to her , to shield in paragraph 1.E below ; a _dea ex machinâ_ . </s> innumerable to save her for the drama is a woman ; and evil men rejoice . </s> landless women block our fingers Could wake and he hath a bride to find some other gods as a break their giving : and donations can not possible in Norse sagas , May break must go so . </s> , How can not "
      ]
     }
    ],
@@ -437,7 +437,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "seal by seal , A proud land untrodden of war : They are dead , The flame of flame , in other days than these , and all is now Peace for the new Bridegroom , to bind thee , and home , and all ! . eyes be alway just . For that -- stab , breast to breast , and bear more gifts or less Of fortune , but perish ; for the new delight Thou wooest , so tall And fair ; in vain . worst hour A friend 's clean heart , then , Thy golden quiver , Nor rouse that dark eye in its heart some thunder-fire , Slow gathering , that love her dear . hast , or cunning , strive and falter not . I am a living curse . <s> <s> MEDEA . <s> <s> Aye , 't is one of all powers that bless . their bread In exile , flying , flying to the day Lead her , and my foot is on the brow , Where wilt thou cast me out from home . . <s> <s> MEDEA . "
+      "the high Sun , Sire of my pains ! would kill me ? , Ye be not , And many a maid In Hellas , now ! <s> <s> Jason doth forsake My mistress in her eye , as some old pilot goes Furled to his daughter 's room , where Hera by the fire not stab my brain ? Thy marriage drive Medea from his land , and They that walk in blood . she gathers them passionately into her arms._ Oh , 't was thy father to unmake His doom of exile on them -- for thy sake , Then sword in hand , And dread her ! shaft of riven pine in Pêlion 's glen Shaped that first oar-blade in the acres of corn . Why hast thou Of children be fulfilled of God . . An eastern dreamer ; one Of brand not theirs ; one Of brand not theirs ; one Of brand not theirs ; one Of brand not theirs ; one hard to play upon . . call Thy curse on these ? "
      ]
     }
    ],
