--- a/In-Class Jupyter Notebooks/Python functions.ipynb
+++ b/In-Class Jupyter Notebooks/Python functions.ipynb
@@ -13,7 +13,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "68.0\n"
+     ]
+    }
+   ],
    "source": [
     "print( (20 * 9/5) + 32)"
    ]
@@ -22,7 +30,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "86.0\n"
+     ]
+    }
+   ],
    "source": [
     "print( (30 * 9/5) + 32)"
    ]
@@ -36,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,10 +249,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.0\n",
+      "what\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import punctuation as punc\n",
+    "\n",
+    "def fahrenheit_to_celsius(temp):\n",
+    "    return((temp - 32) * 5/9)\n",
+    "\n",
+    "def strip_string(string):\n",
+    "    return string.strip(punc).lower()\n",
+    "\n",
+    "print(fahrenheit_to_celsius(50))\n",
+    "print(strip_string(\"???WHAT???\"))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -288,10 +324,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['123', '3.4', '67.9']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def weird_function(string):\n",
+    "    lst1 = string.split()\n",
+    "    \n",
+    "    for word in lst1:\n",
+    "        if re.search(r\"^https\", word):\n",
+    "            lst1.remove(word)\n",
+    "    \n",
+    "    return lst1\n",
+    "\n",
+    "weird_function(\"123 3.4  67.9\")"
+   ]
   },
   {
    "cell_type": "markdown",
